# tiny-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
game/: CMakeLists.txt  README.md
game/include/: game_core.hpp  platform.hpp  tiny_dll.hpp
game/include/containers/: allocations.hpp  refcounted_ptr.hpp  smart_ptr.hpp  string.hpp  vector.hpp
game/include/forward_decl/: platform.hpp
game/include/game/: config.hpp
game/include/graphics/: animated_sprite.hpp  graphics_enums.hpp  image.hpp  sprite.hpp  spritebatch.hpp  texture.hpp
game/include/serialization/: helpers.hpp
game/platform/bgfx/: image.cpp  sprite.cpp  spritebatch.cpp
game/platform/bgfx/bgfx/imgui/: imgui.cpp
game/platform/bgfx/bgfx/nanovg/: fontstash.h
game/platform/opengl/: gl_util.h  glad.c  glad.h  graphics_enums.hpp  graphics_handle.hpp  graphics_util.hpp  image.cpp  texture.cpp  vertex_decl.cpp  vertex_decl.hpp
game/platform/opengl/wrappers/: opengl_buffer_base.hpp  opengl_constant_buffer.cpp  opengl_constant_buffer.hpp  opengl_enum_conversion.hpp  opengl_graphics_interface.cpp  opengl_graphics_interface.hpp  opengl_index_buffer.cpp  opengl_index_buffer.hpp  opengl_rendertexture.cpp  opengl_rendertexture.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_shader_program.cpp  opengl_shader_program.hpp  opengl_shader_storage_buffer.cpp  opengl_shader_storage_buffer.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_util.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.hpp
game/platform/sdl/: imgui_impl_sdl.h  imgui_sdl.cpp  main.cpp  platform_impl.cpp  sdl_platform.h
game/platform/windows/: dll.cpp  main.cpp  platform_impl.cpp  stb.cpp  win_platform.h
game/src/: allocations.cpp  core.cpp  miniz.cpp
gamedata/: README.md
windows-scripts/: build-win64.bat  generate-project-win64.bat
